# neuro_pilot_labeler

./: .gitignore  README.md  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/core/storage/: hybrid_storage.py  storage_provider.py
app/domain/interfaces/: repository.py  storage.py
app/domain/models/: label.py  project.py  sample.py
app/domain/services/: annotation_service.py  project_service.py  sample_service.py  version_service.py
app/repositories/: base_repository.py  project_repository.py  sample_repository.py  version_repository.py
app/routers/: label_router.py  upload_router.py  version_router.py
app/schemas/: label.py
app/services/: label_service.py  upload_service.py  version_service.py
app/utils/: yolo_utils.py
scripts/: analyze_labels.py  audit_labels.py  cleanup_labels.py  surgical_cleanup.py
tests/: conftest.py  test_api.py  test_publish.py
tests/integration/: test_labels_api.py  test_merge_api.py
tests/unit/domain/: test_label.py  test_project.py  test_sample.py
tests/unit/repositories/: test_filter_repo.py
tests/unit/services/: test_annotation_service.py  test_merge_service.py  test_project_service.py  test_sample_service.py
ui/src/api/: index.ts
ui/src/components/: PublishModal.tsx
ui/src/components/canvas/: Annotator.tsx
ui/src/pages/: AnnotatePage.tsx  DatasetPage.tsx  ProjectsPage.tsx  VersionsPage.tsx
