[project]
name = "neuro-pilot-labeler"
version = "0.1.0"
description = "An e2e labeler for self driving trajectory prediction and object detection"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "fastapi>=0.135.1",
    "minio>=7.2.20",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "pyyaml",
]
